# npurobocourse_sim

./: README.md
hector-quadrotor-noetic/hector_gazebo/hector_gazebo_worlds/worlds/: apriltag.world  easy_world.world  room_mini.world
hector-quadrotor-noetic/hector_localization/message_to_tf/src/: message_to_tf.cpp
hector-quadrotor-noetic/hector_quadrotor/hector_quadrotor/scripts/: odom.py
hector-quadrotor-noetic/hector_quadrotor/hector_quadrotor_controller/launch/: controller.launch
hector-quadrotor-noetic/hector_quadrotor/hector_quadrotor_demo/launch/: drone_empty.launch  outdoor_flight_gazebo.launch  outdoor_flight_gazebo（另一个复件）.launch  outdoor_flight_gazebo（第 3 个复件）.launch  sim.launch  sim_real.launch
hector-quadrotor-noetic/hector_quadrotor/hector_quadrotor_demo/rviz_cfg/: outdoor_flight.rviz  virtuality_reality.rviz
hector-quadrotor-noetic/hector_quadrotor/hector_quadrotor_demo/scripts/: mini_track_drone.py  pubtf.py  show_tello.py  statictf.py  (+1 more)
rmtt_apriltag/config/: tags.yaml
rmtt_apriltag/launch/: detection.launch
rmtt_tracker/: CMakeLists.txt
rmtt_tracker/launch/: learning_tf2.launch  position_track.launch  rmtt_smach_to_pass.launch  rmtt_tag_tracker.launch  tag_tracker.launch
rmtt_tracker/scripts/: controller.py  gesture_control.py  go2pose.py  mission_control.py  mission_full.py  mission_pad_id.py  pid_test.py  pos_track.py  pose.py  potential_field_bezier.py  pub_goal.py  referee.py  rmtt_circle_detection.py  rmtt_circle_tracking.py  rmtt_face_tracker.py  rmtt_smach.py  rmtt_tag_tracker.py  roi_tracker.py  rotate_pose.py  score.py  smach_stanley.py  stanley.py  stanley_pf.py  tag_tracker.py  turtle_tf2_listener.py
tams_apriltags-master/: CMakeLists.txt  README.md  package.xml
tams_apriltags-master/Media/materials/scripts/: AprilTags36H11.material  RobotEra.material  Thiago.material
tams_apriltags-master/Media/materials/textures/: make_collada_textures.sh  readme.txt
tams_apriltags-master/Media/materials/textures/tag36h10/: alltags.ps
tams_apriltags-master/config/: phasespace_board.rviz
tams_apriltags-master/launch/: april_cube_demo.launch  apriltag_demo.launch  apriltag_demo.rviz  balancing_counterweight_demo.launch  balancing_pole_demo.launch  brush_demo.launch  phasespace_calibration_board_demo.launch  spawn_sdf.launch  spawn_xacro.launch  thiago_cards_demo.rviz  tiago_cards_demo.launch  tiago_cards_demo.rviz
tams_apriltags-master/meshes/: card_100x100x01.scad  card_100x100x01.stl  make_meshes.sh  master.dae  tag16_05_00000.dae  tag16_05_00001.dae  tag16_05_00002.dae  tag16_05_00003.dae  tag16_05_00004.dae  tag16_05_00005.dae  tag16_05_00006.dae  tag16_05_00007.dae  tag16_05_00008.dae  tag16_05_00009.dae  tag16_05_00010.dae  tag16_05_00011.dae  tag16_05_00012.dae  tag16_05_00013.dae  tag16_05_00014.dae  tag16_05_00015.dae  tag16_05_00016.dae  tag16_05_00017.dae  tag16_05_00018.dae  tag16_05_00019.dae  tag16_05_00020.dae  tag16_05_00021.dae  tag16_05_00022.dae  tag16_05_00023.dae  tag16_05_00024.dae  tag16_05_00025.dae  tag16_05_00026.dae  tag16_05_00027.dae  tag16_05_00028.dae  tag16_05_00029.dae  tag36_11_00010.dae  tag36_11_00011.dae  tag36_11_00012.dae  tag36_11_00013.dae  tag36_11_00014.dae  tag36_11_00015.dae  (+571 more)
tams_apriltags-master/misc/: aprilcube-40-45.fig  aprilcube-46-51.fig  aprilcube-52-57.fig  aprilcube-60-65.fig  apriltag-119.fig  phasespace-board-atag122.fig  phasespace-calibrator.fig  readme.txt  tiago_command_cards.tex
tams_apriltags-master/urdf/: april_cube.xacro  april_cube_40.xacro  april_cube_46.xacro  april_cube_52.xacro  april_cube_60.xacro  april_cube_demo.xacro  apriltag_box.xacro  apriltag_demo.xacro  apriltag_disk.xacro  apriltag_marker.xacro  balancing_pole.xacro  balancing_pole_counterweight.xacro  box_50x50x50.urdf  hand_brush.xacro  hanoi_demo.xacro  materials.xacro  pentagon_70.xacro  phasespace_calibration_board.xacro  phasespace_calibration_board_instance.xacro  phasespace_calibration_demo.xacro  round_brush.xacro  thiago_cards_demo.xacro  thiago_command_card.xacro  tiago_cards_demo.xacro  tiago_command_card.xacro  utilities.xacro
teleop_twist_keyboard_mini/: CMakeLists.txt  package.xml  teleop_twist_keyboard.py
tianbot_mini/launch/: amcl.launch  map_save.launch  simulation.launch
tianbot_mini/maps/: easy.pgm  easy.yaml  map.pgm  map.yaml
tianbot_mini/urdf/: tianbot_mini.urdf.xacro  tianbot_mini.urdf_failed.xacro  tianbot_mini_spawn.xacro
tianbot_nav/: CMakeLists.txt  package.xml
tianbot_nav/launch/: navigation_demo.launch  view_navigation.launch
tianbot_nav/launch/include/: move_base.launch.xml  robot_amcl.launch.xml
tianbot_nav/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
tianbot_nav/rviz/: navigation.rviz
tianbot_slam/: CMakeLists.txt  package.xml
tianbot_slam/launch/: gmapping.launch
tianbot_slam/maps/: room.pgm  room.yaml
(+6 files in other folders)
